Closed
Bug 348272
Opened 16 years ago
Closed 16 years ago
[FIX]Diverting windows into tabs can cause DOM bustage
Categories
(Core :: DOM: Navigation, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla1.9alpha1
People
(Reporter: bzbarsky, Assigned: bzbarsky)
References
Details
(Keywords: fixed1.8.1)
Attachments
(2 files)
924 bytes,
text/html
|
Details | |
1.65 KB,
patch
|
benjamin
:
review+
jst
:
superreview+
beltzner
:
approval1.8.1+
|
Details | Diff | Splinter Review |
STEPS TO REPRODUCE: Load attached testcase. EXPECTED RESULTS: Pass ACTUAL RESULTS: Fail DETAILS: The problem is that the window provider implementation starts an about:blank load in the window it provides. This can't be worked around in that implementation easily, since just appending a <xul:browser> into the DOM starts such a load in it; the only way to fix this on the provider side would be to either explicitly call stop() or to nor return from provideWindow until the load completes (which is what happens when we actually open a new window). Given the difficulty of doing the latter, I think the right solution is to just call stop() in the window watcher.
![]() |
Assignee | |
Comment 1•16 years ago
|
||
![]() |
Assignee | |
Comment 2•16 years ago
|
||
Attachment #233153 -
Flags: superreview?(jst)
Attachment #233153 -
Flags: review?(benjamin)
![]() |
Assignee | |
Comment 3•16 years ago
|
||
I'd like to land that change on the 1.8 branch too, by the way.
Assignee: nobody → bzbarsky
Priority: -- → P1
Summary: Diverting windows into tabs can cause DOM bustage → [FIX]Diverting windows into tabs can cause DOM bustage
Target Milestone: --- → mozilla1.9alpha
Updated•16 years ago
|
Attachment #233153 -
Flags: review?(benjamin) → review+
Comment 4•16 years ago
|
||
Comment on attachment 233153 [details] [diff] [review] Proposed fix sr=jst
Attachment #233153 -
Flags: superreview?(jst) → superreview+
![]() |
Assignee | |
Comment 5•16 years ago
|
||
Fixed on trunk.
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
![]() |
Assignee | |
Comment 6•16 years ago
|
||
Comment on attachment 233153 [details] [diff] [review] Proposed fix I think we should take this on branch. This gives us better compat between windows redirected into tabs and just windows.
Attachment #233153 -
Flags: approval1.8.1?
Comment 7•16 years ago
|
||
Comment on attachment 233153 [details] [diff] [review] Proposed fix a=beltzner on behalf of drivers for the mozilla 181 branch
Attachment #233153 -
Flags: approval1.8.1? → approval1.8.1+
You need to log in
before you can comment on or make changes to this bug.
Description
•