Diverting window.open into a tab doesn't stop the about:blank load before returning the new window.  Bug 348272, r=bsmedberg, sr=jst